<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_TaiKhoanCuaToi"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow android:layout_height="match_parent"
                android:weightSum="10">

                <ImageView
                    android:layout_weight="2"
                    android:id="@+id/imvBack"
                    android:layout_width="42dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_arrow_back_24" />

                <TextView
                    android:layout_weight="6"
                    android:id="@+id/txtTaiKhoanCuaToi"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/tkct"
                    android:textColor="@color/black"
                    android:textSize="25dp"/>

            </TableRow>
        </TableLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imvHinhDaiDien"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/hinhkhachhang3"
        android:layout_gravity="center_vertical"
        android:paddingTop="20dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/txtTenTaiKhoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="An Nguyễn"
        android:textSize="25sp"
        android:paddingTop="10dp"
        android:textColor="#272727"
        android:layout_gravity="center"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtThongTinTaiKhoan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginStart="80dp"
            android:text="@string/tttk"
            android:textColor="@color/black"
            android:textSize="22dp" />

        <ImageView
            android:id="@+id/imvSua"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:src="@drawable/icon_chinhsua" />
    </LinearLayout>

    <TableLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:paddingTop="10dp">
        <TableRow android:weightSum="10">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten"
                android:textSize="18sp"
                android:textColor="#272727"
                android:layout_weight="2"/>
            <EditText
                android:cursorVisible="false"
                android:id="@+id/edtTen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="An Nguyễn"
                android:textSize="18sp"
                android:textColor="#272727"
                android:layout_marginLeft="60dp"
                android:layout_weight="8"/>
        </TableRow>

        <TableRow
            android:paddingTop="10dp"
            android:weightSum="10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18sp"
                android:textColor="#272727"
                android:layout_weight="2"/>
            <EditText
                android:cursorVisible="false"
                android:id="@+id/edtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="annguyen@gmail.com"
                android:textSize="18sp"
                android:textColor="#272727"
                android:layout_marginLeft="60dp"
                android:layout_weight="8"/>
        </TableRow>

        <TableRow
            android:paddingTop="10dp"
            android:weightSum="10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dienthoai"
                android:textSize="18sp"
                android:textColor="#272727"
                android:layout_weight="2"/>
            <EditText
                android:cursorVisible="false"
                android:id="@+id/edtSoDienThoai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01234976"
                android:textSize="18sp"
                android:textColor="#272727"
                android:layout_marginLeft="60dp"
                android:layout_weight="8"/>
        </TableRow>

        <TableRow
            android:paddingTop="10dp"
            android:weightSum="10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gioitinh"
                android:textSize="18sp"
                android:textColor="#272727"
                android:layout_weight="2"/>
            <EditText
                android:cursorVisible="false"
                android:id="@+id/edtGioiTinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nữ"
                android:textSize="18sp"
                android:textColor="#272727"
                android:layout_marginLeft="60dp"
                android:layout_weight="8"/>
        </TableRow>

        <TableRow
            android:paddingTop="10dp"
            android:weightSum="10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ngaysinh"
                android:textSize="18sp"
                android:textColor="#272727"
                android:layout_weight="2"/>
            <EditText
                android:id="@+id/edtNgaySinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21/05/2001"
                android:textSize="18sp"
                android:textColor="#272727"
                android:layout_marginLeft="60dp"
                android:layout_weight="6"/>
            <ImageView
                android:id="@+id/imvLich"
                android:src="@drawable/ic_baseline_calendar_today_24"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:paddingTop="10dp">
        <Button
            android:id="@+id/btnLuuThayDoi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/luu"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:backgroundTintMode="screen"
            android:backgroundTint="#00D665"/>

        <Button
            android:id="@+id/btnDoiMatKhau"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/doimk"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:backgroundTintMode="screen"
            android:backgroundTint="#00D665"/>

    </LinearLayout>

</LinearLayout>